testing/src/java7srclisting/errors/ErrorV13.java
package java7srclisting.errors;

public class ErrorV13 {

    static class Test1 {
    }

    @Deprecated
    static class Test2 {

    }

}
